--- a/src/colophon.njk
+++ b/src/colophon.njk
@@ -38,11 +38,13 @@ I used [VSCode](https://code.visualstudio.com/) for development; [Chromium Night
 
 - The [A11Y Project](https://www.a11yproject.com/)
 
-<div class="irevamp-mt-md irevamp-mb-md ">
+<div class="irevamp-mt-lg irevamp-mb-md ">
+
+> [Test 404 page](/not-a-link)
 
 <blockquote class="blockquote-lilac irevamp-lead">
     
-This page was built using the `base` layout I made. Most pages on this site use the same `base` layout, which makes pages load faster. Read more about [static site generation](https://www.cloudflare.com/learning/performance/static-site-generator/)
+This page was built using the `base` layout I made. Most pages on this site use the same `base` layout, which makes pages load faster. Read more about [static site generation](https://www.cloudflare.com/learning/performance/static-site-generator/).
 
 </blockquote>
 </div>
