Style fixes and updates

--- a/src/_includes/goodreads.html
+++ b/src/_includes/goodreads.html
@@ -1,7 +1,7 @@
 <div class="irevamp-container">
 <div class="irevamp-section goodreads slide-up">
 
-> <div class="irevamp-lead"><a href="https://www.goodreads.com/review/list/60162168-parth-shiralkar?ref=nav_mybooks&shelf=currently-reading">Here's is what I'm currently reading:</a> (clicking on cover will redirect)</div>
+> <a href="https://www.goodreads.com/review/list/60162168-parth-shiralkar?ref=nav_mybooks&shelf=currently-reading">Here's what I'm currently reading:</a>
 
 <div id="gr_grid_widget_1647304638">
   <!-- Show static html as a placeholder in case js is not enabled - javascript include will override this if things work -->
