--- a/src/index.njk
+++ b/src/index.njk
@@ -6,34 +6,22 @@ templateEngineOverride: md, njk
   <div class="irevamp-container slide-up hello">
     <h1 class="irevamp-ink--primary salutation">Parth Shiralkar</h1>
     <div class="intro irevamp-content-maxlength irevamp-ink--primary uppercase">author. developer. likes daal.</div>
-    <p class="irevamp-text irevamp-mt-md">
-  Hi! Welcome to my website. I love designing and developing slick, delightful user experiences. Thereby, most of my personal and professional time is spent doing things to <a class="nolink" href="https://www.youtube.com/watch?v=huHV8aW37ZM" target="_blank" tabindex="-1"><span class="tronafterhidden"></span></a>.
+    <p class="irevamp-mt-md">
+  Hi! Welcome to my website. I love designing and developing slick, delightful user experiences. Thereby, most of my personal and professional time is spent doing things to <a class="nolink" href="https://www.youtube.com/watch?v=huHV8aW37ZM" target="_blank" tabindex="-1">
+        <span class="tronafterhidden"></span></a>.
   
   </p>
 
-  <div class="irevamp-mt-sm irevamp-text irevamp-content-maxlength" style="font-weight: 400;">  I <a href="/writing">write</a>, <a href="https://www.goodreads.com/user_challenges/31527237" target="_blank">read</a>, <a class="" href="/art">make art</a>, and <a href="/climbing">climb</a>. There's also other <a class="" href="/about">cool stuff</a>.
+ I <a href="/writing">write</a>, <a href="https://www.goodreads.com/user_challenges/31527237" target="_blank">read</a>, <a class="" href="/art">make art</a>, and <a href="/climbing">climb</a>. There's also other <a class="" href="/about">cool stuff</a>.
   
-  </div>
 
-{# > [Contact](/hello) #}
-
-
-
-
-
-
-{# > Check out the [styleguide](/styleguide) or the [colophon](/colophon) for this site #}
-
-
-
-</div>
+{# > [Contact](/hello) #}{# > Check out the [styleguide](/styleguide) or the [colophon](/colophon) for this site #}</div>
 </div>
 
 </header>
 <main class="irevamp-container">
 {{ content | safe }}
 </main>
-
 
 {# <script>
       function nowPlaying() {
