--- a/src/index.njk
+++ b/src/index.njk
@@ -14,7 +14,10 @@ templateEngineOverride: md, njk
 
  I <a href="/writing">write</a>, <a href="https://www.goodreads.com/user_challenges/31527237" target="_blank">read</a>, <a class="" href="/art">make art</a>, and <a href="/climbing">climb</a>. There's also other <a class="" href="/about">cool stuff</a>.
   
+<blockquote class="blockquote-lilac irevamp-mt-lg">
 
+**Project highlight:** [A portfolio of my projects in the form of a fun menu card](/menu)
+</blockquote>
 {# > [Contact](/hello) #}{# > Check out the [styleguide](/styleguide) or the [colophon](/colophon) for this site #}</div>
 </div>
 
